--- a/homework/javaScript/js-constructor/index.html
+++ b/homework/javaScript/js-constructor/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="player.js"></script>
   </head>
   <body>
+    <div class="tama">
     <div>
     <input type="button" id = "feed" value = "feed" onclick="player.feedTamagotchi(tamaBen)">
     <input type="button" id = "rest" value = "sleepy time" onclick="player.knockOutTamagotchi(tamaBen)">
@@ -18,7 +19,7 @@
     <div>
       <input type = "button" id ="startItUp" value = "START" onclick="tamaBen.start()">
       <input type = "button" id ="stop" value = "STOP THE MADNESS" onclick="tamaBen.stop()">
-      
+    </div>
     </div>
   </body>
 </html>
